# discodb

./: Cargo.toml  LICENSE  README.md  go.mod
boot/: boot.go
catalog/: catalog.go  catalog_test.go
cmd/discodb/: main.go
config/: config.go  config_test.go  discodb.example.json
constraints/: constraints.go  constraints_test.go
crates/catalog/: Cargo.toml
crates/catalog/src/: error.rs  lib.rs  schema.rs  tables.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs  settings.rs
crates/discord/: Cargo.toml
crates/discord/src/: error.rs  models.rs
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  lib.rs  operators.rs  plan.rs
crates/observability/: Cargo.toml
crates/observability/src/: error.rs  lib.rs  logging.rs  tracing.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: error.rs  lib.rs  queue.rs  worker.rs
crates/sql/: Cargo.toml
crates/sql/src/: error.rs  lib.rs  parser.rs  planner.rs
crates/storage/: Cargo.toml
crates/storage/src/: encoding.rs  error.rs  lib.rs  row.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  id.rs  lib.rs  value.rs
crates/wal/: Cargo.toml
crates/wal/src/: error.rs  lib.rs  record.rs  writer.rs
discord/: attachments.go  channels.go  client.go  errors.go  fake_transport.go  fake_transport_test.go  forums.go  messages.go  models.go  reactions.go  roles.go  transport.go  webhook.go
engine/: catalog_persist.go  engine.go  handlers.go  index_mgr.go  storage.go  wal.go  wal_replay_test.go
executor/: executor.go  executor_test.go  mvcc_test.go
fsm/: fsm.go
index/: encoding.go  index.go  index_test.go
integration/: integration_test.go
mapping/: primitives.go  primitives_test.go
mvcc/: mvcc.go
notes/: note
observability/: observability.go
scheduler/: scheduler.go  scheduler_test.go
sql/: sql.go  sql_test.go
src/: main.rs
storage/: blob.go  blob_test.go  encoding.go  encoding_test.go  storage.go  storage_test.go  toast.go  validate.go  validate_test.go
txn/: txn.go  txn_test.go
types/: types.go  types_test.go
wal/: wal.go  wal_test.go
wire/: wire.go  wire_test.go
