[package]
name = "discodb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crc32fast = "1.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
ahash = "0.7"
byteorder = "1.5"

[dev-dependencies]
tempfile = "3.14"
once_cell = "1.20"

[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/config",
    "crates/observability",
    "crates/discord",
    "crates/storage",
    "crates/wal",
    "crates/mvcc",
    "crates/catalog",
    "crates/scheduler",
    "crates/executor",
    "crates/sql",
    "crates/wire",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
