[package]
name = "discodb-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
discodb-types = { path = "../types" }
discodb-observability = { path = "../observability" }
discodb-discord = { path = "../discord" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
thiserror = "2.0"
tracing = "0.1"
