[package]
name = "discodb-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
discodb-types = { path = "../types" }
discodb-observability = { path = "../observability" }
discodb-catalog = { path = "../catalog" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
crc32fast = "1.4"
byteorder = "1.5"
base64 = "0.22"
hex = "0.4"
serde_json = "1.0"
