[package]
name = "discodb-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
byteorder = "1.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
crc32fast = "1.4"
ahash = "0.7"

[dev-dependencies]
proptest = "1.5"
